--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,8 @@
 <color name="newColorPrimaryText">#222934</color>
 <color name="newColorSecondaryText">#989898</color>
 
-
+    <color name="colorSnackBarSuccess">#8BC34A</color>
+    <color name="colorSnackBarError">#F72400</color>
 
 
 
