4. Registering the User and Firebase Authentication

--- a/app/src/main/res/drawable/button_gradiant_1.xml
+++ b/app/src/main/res/drawable/button_gradiant_1.xml
@@ -5,8 +5,8 @@
     <corners android:radius="8dp" />
     <gradient
         android:angle="90"
-        android:endColor="@color/newColorThemePink"
-        android:centerColor="@color/newColorThemeOrange"
-        android:startColor="@color/newColorThemeOrange" />
+        android:endColor="@color/colorThemePink"
+        android:centerColor="@color/colorThemeOrange"
+        android:startColor="@color/colorThemeOrange" />
 
 </shape>
