--- a/app/src/main/res/drawable/drawable_gender_tab_selector.xml
+++ b/app/src/main/res/drawable/drawable_gender_tab_selector.xml
@@ -4,7 +4,7 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/newColorThemePink" />
+            <solid android:color="@color/colorThemePink" />
 
             <corners android:bottomLeftRadius="@dimen/gender_radio_button_radius"
                 android:bottomRightRadius="@dimen/gender_radio_button_radius"
@@ -18,7 +18,7 @@
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <stroke android:width="@dimen/gender_radio_button_stroke_width"
-                android:color="@color/newColorSecondaryText" />
+                android:color="@color/colorSecondaryText" />
             <corners
                 android:bottomLeftRadius="@dimen/gender_radio_button_radius"
                 android:bottomRightRadius="@dimen/gender_radio_button_radius"
