--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="@string/title_login"
-        android:textColor="@color/newColorPrimaryText"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="@dimen/title_textSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/et_hint_email_id"
-        android:textColorHint="@color/newColorSecondaryText"
+        android:textColorHint="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title">
@@ -77,7 +77,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/et_hint_password"
-        android:textColorHint="@color/newColorSecondaryText"
+        android:textColorHint="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_email">
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:padding="@dimen/et_padding"
-            android:textColor="@color/newColorPrimaryText"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="@dimen/et_textSize"
             tools:text="123456" />
 
@@ -102,7 +102,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:padding="@dimen/clickable_text_view_padding"
         android:text="@string/lbl_forgot_password"
-        android:textColor="@color/newColorSecondaryText"
+        android:textColor="@color/colorSecondaryText"
         android:textSize="@dimen/forgot_password_textSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til_password" />
@@ -143,7 +143,7 @@
             android:layout_marginTop="16dp"
             android:padding="@dimen/clickable_text_view_padding"
             android:text="@string/don_t_have_an_account"
-            android:textColor="@color/newColorSecondaryText"
+            android:textColor="@color/colorSecondaryText"
             android:textSize="@dimen/lbl_text_view_textSize" />
 
         <com.example.althealth.utils.AltTextViewBold
@@ -154,7 +154,7 @@
             android:foreground="?attr/selectableItemBackground"
             android:padding="@dimen/clickable_text_view_padding"
             android:text="@string/register"
-            android:textColor="@color/newColorSecondaryText"
+            android:textColor="@color/colorSecondaryText"
             android:textSize="@dimen/lbl_text_view_textSize" />
 
     </LinearLayout>
