--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
             android:paddingStart="@dimen/toolbar_title_paddingStart"
             android:paddingEnd="0dp"
             android:text="@string/create_an_account"
-            android:textColor="@color/newColorPrimaryText"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="@dimen/toolbar_title_text_size" />
 
     </androidx.appcompat.widget.Toolbar>
@@ -47,7 +47,7 @@
                 android:layout_marginTop="26dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/hint_first_name"
-                android:textColorHint="@color/newColorSecondaryText"
+                android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:padding="@dimen/et_padding"
-                    android:textColor="@color/newColorPrimaryText"
+                    android:textColor="@color/colorPrimaryText"
                     android:textSize="@dimen/et_textSize" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -72,7 +72,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/hint_last_name"
-                android:textColorHint="@color/newColorSecondaryText"
+                android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_first_name">
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:padding="@dimen/et_padding"
-                    android:textColor="@color/newColorPrimaryText"
+                    android:textColor="@color/colorPrimaryText"
                     android:textSize="@dimen/et_textSize" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -97,7 +97,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/et_hint_email_id"
-                android:textColorHint="@color/newColorSecondaryText"
+                android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_last_name">
@@ -108,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:padding="@dimen/et_padding"
-                    android:textColor="@color/newColorPrimaryText"
+                    android:textColor="@color/colorPrimaryText"
                     android:textSize="@dimen/et_textSize" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -122,7 +122,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/et_hint_password"
-                android:textColorHint="@color/newColorSecondaryText"
+                android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_email">
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:padding="@dimen/et_padding"
-                    android:textColor="@color/newColorPrimaryText"
+                    android:textColor="@color/colorPrimaryText"
                     android:textSize="@dimen/et_textSize" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -147,7 +147,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/et_hint_confirm_password"
-                android:textColorHint="@color/newColorSecondaryText"
+                android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_password">
@@ -158,7 +158,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:padding="@dimen/et_padding"
-                    android:textColor="@color/newColorPrimaryText"
+                    android:textColor="@color/colorPrimaryText"
                     android:textSize="@dimen/et_textSize" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -186,7 +186,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                     android:text="@string/i_agree_to_the_terms_and_condition"
-                    android:textColor="@color/newColorSecondaryText"
+                    android:textColor="@color/colorSecondaryText"
                     android:textSize="@dimen/txt_terms_and_condition_textSize" />
             </LinearLayout>
 
@@ -225,7 +225,7 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/clickable_text_view_padding"
                     android:text="@string/already_have_an_account"
-                    android:textColor="@color/newColorSecondaryText"
+                    android:textColor="@color/colorSecondaryText"
                     android:textSize="@dimen/lbl_text_view_textSize" />
 
                 <com.example.althealth.utils.AltTextViewBold
@@ -235,7 +235,7 @@
                     android:foreground="?attr/selectableItemBackground"
                     android:padding="@dimen/clickable_text_view_padding"
                     android:text="@string/login"
-                    android:textColor="@color/newColorSecondaryText"
+                    android:textColor="@color/colorSecondaryText"
                     android:textSize="@dimen/lbl_text_view_textSize" />
 
             </LinearLayout>
