The Forgot Password Implementation and Test

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -30,7 +30,7 @@
             android:src="@drawable/triple_k_logo"
             app:tint="@color/white" />
 
-        <Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_forgot_password_activity"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -80,7 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title_description">
 
         <com.example.althealth.utils.AltEditText
-            android:id="@+id/et_email"
+            android:id="@+id/et_email_forgot_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
