Creating the User Profile Activity Design

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="abc@gmail.com"
+            android:hint="abc@gmail.com"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
